--- a/app/assets/sass/modules/forms/_form.scss
+++ b/app/assets/sass/modules/forms/_form.scss
@@ -1,3 +1,23 @@
 form {
+  @extend %contain-floats;
   display: block;
+}
+
+.form-group {
+  @extend %contain-floats;
+
+  &.-controls {
+    margin: $leading 0;
+
+    @include media(mid) {
+      float: left;
+    }
+
+    & .button {
+      @include media(mid) {
+        float: right;
+      }
+    }
+  }
+
 }
