--- a/app/assets/sass/modules/layout/_grid.scss
+++ b/app/assets/sass/modules/layout/_grid.scss
@@ -86,5 +86,8 @@ $gutter: 3.4%;
 
 .grid-row [class*='grid-'] {
   /*background-color: #eee;*/
-}
 
+  & > :first-child {
+    margin-top: 0;
+  }
+}
