--- a/app/views/_layouts/layout.html
+++ b/app/views/_layouts/layout.html
@@ -22,9 +22,7 @@
       {% block content %}{% endblock %}
     </main>
 
-    <footer role="contentinfo">
-      {% block footer %}{% endblock %}
-    </footer>
+    {% include '_includes/footer.html' %}
 
     <script src="/scripts/jquery-1.12.4.min.js"></script>
     <script src="/scripts/selection-buttons.js"></script>
