--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,8 +4,10 @@
 
 {% block content %}
   <ul>
-    <li>Test <a href="/library/form-elements">Form elements</a></li>
-    <li>Test <a href="#">Link</a></li>
+    <li><a href="/v1/start">Sprint 1: GMS1 form</a></li>
+  </ul>
+  <ul>
+    <li><a href="/library/form-elements">Library: form elements</a></li>
   </ul>
 {% endblock %}
 
