--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -1,9 +1,11 @@
 @import "tools/contain-floats";
 @import "tools/media-queries";
+@import "tools/spacing";
 @import "tools/tints";
 
 @import "variables/colours";
 @import "variables/frutiger";
+//@import "variables/fs-me";
 
 //Typopgraphy
 @import "modules/typography/base";
@@ -18,11 +20,16 @@
 
 // Modules
 @import "modules/banner/prototype";
-@import "modules/header-global/header-global";
-
+@import "modules/controls/buttons";
+@import "modules/disclosure/details";
+@import "modules/footer-global/footer";
+@import "modules/forms/date";
 @import "modules/forms/errors";
 @import "modules/forms/fieldset";
+@import "modules/forms/form";
 @import "modules/forms/input";
 @import "modules/forms/label";
 @import "modules/forms/radio-checkbox";
 @import "modules/forms/textarea";
+@import "modules/header-global/header-global";
+@import "modules/signage/info";
