--- a/app/assets/sass/modules/forms/_fieldset.scss
+++ b/app/assets/sass/modules/forms/_fieldset.scss
@@ -1,7 +1,7 @@
 fieldset {
   border: 0;
   padding: 0.01em 0 0 0;
-  margin: 0;
+  margin: 0 0 $leading*2 0;
   min-width: 0;
 
   body:not(:-moz-handler-blocked) & {
