--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -1,4 +1,6 @@
-input[type='text'] {
+input[type='text'],
+input[type='number'],
+input[type='tel'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -9,17 +11,25 @@ input[type='text'] {
   display: block; // Remove margin under textarea in Chrome and FF
   width: 100%;
   margin: $leading 0 $leading*2 0;
-  padding: $leading/2 $leading/4;
-  border: 3px solid $nhs-blue;
+  padding: $leading/2;
+  border: 2px solid $nhs-blue;
   font-family: inherit;
   font-size: inherit;
   font-weight: $bodyweight;
-  line-height: $leading*3;
+  line-height: $leading*2;
+
+  @include media(mid) {
+    width: 75%;
+  }
 
   &:focus {
     outline: 0;
     -webkit-box-shadow: 0 0 0 5px $focus-colour;
     -moz-box-shadow: 0 0 0 5px $focus-colour;
     box-shadow: 0 0 0 5px $focus-colour;
+  }
+
+  &.-small {
+    width: 8em;
   }
 }
