--- a/app/assets/sass/modules/forms/_label.scss
+++ b/app/assets/sass/modules/forms/_label.scss
@@ -1,15 +1,35 @@
 label {
   display: block;
   width: 100%;
+  font-weight: $bodyweight;
+}
 
-  .form-hint {
-    display: block;
-    font-size: $body;
-    font-weight: $bodyweight;
-    line-height: $leading*2;
-  }
+.form-hint {
+  display: block;
+  clear: both;
+  margin: $leading 0 $leading*2 0;
+  font-size: $body;
+  font-weight: $bodyweight;
+  line-height: $leading*2;
+  color: #5C6770;
 }
 
 .primary {
   @extend h1;
+
+  margin-top: 0;
+  display: block;
+}
+
+.secondary {
+  @extend h2;
+
+  font-weight: $bodyweight;
+  display: block;
+}
+
+.block-label-legend {
+  display: block;
+  width: 100%;
+  font-weight: bold;
 }
