--- a/app/assets/sass/modules/forms/_textarea.scss
+++ b/app/assets/sass/modules/forms/_textarea.scss
@@ -9,19 +9,23 @@ textarea {
   display: block; // Remove margin under textarea in Chrome and FF
   width: 100%;
   margin: $leading 0 $leading*2 0;
-  padding: $leading/2 $leading/4;
+  padding: $leading/2;
   border: 3px solid $nhs-blue;
   font-family: inherit;
   font-size: inherit;
   font-weight: $bodyweight;
-  line-height: $leading*3;
+  line-height: $leading*2;
 
   background-image: -webkit-linear-gradient(top, $pale-grey 0, rgba(255,255,255,0) 1px);
   background-image: -moz-linear-gradient(top, $pale-grey 0, rgba(255,255,255,0) 1px);
   background-image: -o-linear-gradient(top, $pale-grey 0, rgba(255,255,255,0) 1px);
   background-image: linear-gradient(to bottom, $pale-grey 0, rgba(255,255,255,0) 1px);
   background-repeat: repeat-y;
-  background-size: 100% $leading*3;
+  background-size: 100% $leading*2;
+
+  @include media(mid) {
+    width: 75%;
+  }
 
   &:focus {
     outline: 0;
