--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -21,6 +21,7 @@
 // Modules
 @import "modules/banner/prototype";
 @import "modules/controls/buttons";
+@import "modules/data/table";
 @import "modules/disclosure/details";
 @import "modules/footer-global/footer";
 @import "modules/forms/date";
