--- a/app/views/v1/date-of-birth.html
+++ b/app/views/v1/date-of-birth.html
@@ -38,7 +38,11 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      <a href="name" class="button -back">Back</a>
+      {% set back = 'name' %}
+      {% if edit == true %}
+        {% set back = 'confirm-details' %}
+      {% endif %}
+      <a href="{{ back }}" class="button -back">Back</a>
     </div>
 
   </form>
