--- a/app/views/v1/nhs-number-choice.html
+++ b/app/views/v1/nhs-number-choice.html
@@ -34,7 +34,11 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      <a href="contact-details" class="button -back">Back</a>
+      {% set back = 'contact-details' %}
+      {% if edit == true %}
+        {% set back = 'confirm-details' %}
+      {% endif %}
+      <a href="{{ back }}" class="button -back">Back</a>
     </div>
 
   </form>
