--- a/app/views/v1/contact-details.html
+++ b/app/views/v1/contact-details.html
@@ -31,7 +31,11 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      <a href="home-address" class="button -back">Back</a>
+      {% set back = 'home-address' %}
+      {% if edit == true %}
+        {% set back = 'confirm-details' %}
+      {% endif %}
+      <a href="{{ back }}" class="button -back">Back</a>
     </div>
   </form>
 {% endblock %}
