Tweak name question

--- a/app/views/v1/name.html
+++ b/app/views/v1/name.html
@@ -34,7 +34,7 @@
 
     <fieldset>
       <legend class="block-label-legend">
-        Have you ever changed your name?
+        <span class="secondary">Have you ever changed your name?</span>
         <span class="form-hint">For example, by marriage or deed poll</span>
       </legend>
 
