--- a/app/views/v1/confirm-details.html
+++ b/app/views/v1/confirm-details.html
@@ -88,14 +88,8 @@
     </tr>
   </table>
 
-  <h2 class="secondary">Send your details</h2>
-
-  <div class="measure">
-    <p>By sending your application you confirm that the information you have provided is true.</p>
-
-    <div class="form-group">
-      <a href="registration-submitted" class="button">I accept - send my application</a>
-    </div>
+  <div class="shunt-2">
+    <a href="registration-submitted" class="button">Send my application</a>
   </div>
 
 {% endblock %}
