--- a/app/views/_includes/masthead.html
+++ b/app/views/_includes/masthead.html
@@ -3,6 +3,12 @@
     <a href="/" class="header-logo" title="Go to the index page">
       <img src="/images/nhs-logotype-blue.svg" alt="NHS" />
     </a>
-    <span class="service-name">{{serviceName}}</span>
+    <span class="service-name">
+      {% if practiceName %}
+        Register with {{ practiceName }}
+      {% else %}
+        {{serviceName}}
+      {% endif %}
+    </span>
   </div>
 </header>
