--- a/app/views/v1/nhs-number-choice.html
+++ b/app/views/v1/nhs-number-choice.html
@@ -1,6 +1,13 @@
 {% extends '_layouts/layout.html' %}
 
-{% block page_title %}Index : {{serviceName}}{% endblock %}
+{% block page_title %}
+  Your NHS number : 
+  {% if practiceName %}
+    Register with {{ practiceName }}
+  {% else %}
+    {{serviceName}}
+  {% endif %}
+{% endblock %}
 
 {% block content %}
 
