Add a dummy NHS Number lookup service link

--- a/app/views/sprint-1/nhs-number-choice.html
+++ b/app/views/sprint-1/nhs-number-choice.html
@@ -6,7 +6,7 @@
   <h1 class="primary">Do you know your NHS number?</h1>
 
   <details class="measure">
-    <summary>Where can I find my NHS number?</summary>
+    <summary>How can I find my NHS number?</summary>
     <div>
       <p>
         An NHS number is a 10 digit number, for example: <b>943 476 5919</b>
