--- a/app/views/v1/nhs-number-choice.html
+++ b/app/views/v1/nhs-number-choice.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your NHS number : 
+  Your NHS number :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -39,6 +39,24 @@
       </div>
     </fieldset>
 
+    <details>
+      <summary>How can I find my NHS number?</summary>
+      <div class="signage">
+        <div class="info">
+          <p>
+            An NHS number is a 10 digit number, for example: <b>943 476 5919</b>
+          </p>
+          <p>You can find your NHS number:</p>
+          <ul>
+            <li><a href="javascript:return false;">Online using the Find My NHS Number servce</a></li>
+            <li>on your NHS medical card if you have one</li>
+            <li>on a letter from your GP or a hospital</li>
+            <li>on a printed prescription</li>
+          </ul>
+        </div>
+      </div>
+    </details>
+
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'contact-details' %}
@@ -49,23 +67,6 @@
     </div>
 
   </form>
-
-  <details>
-    <summary>Where can I find my NHS number?</summary>
-    <div class="signage">
-      <div class="info">
-        <p>
-          An NHS number is a 10 digit number, for example: <b>943 476 5919</b>
-        </p>
-        <p>You can find your NHS number on:</p>
-        <ul>
-          <li>your NHS medical card if you have one</li>
-          <li>a letter from your GP or a hospital</li>
-          <li>a printed prescription</li>
-        </ul>
-      </div>
-    </div>
-  </details>
 {% endblock %}
 
 {% block footer %}{% endblock %}
