--- a/app/views/v1/start.html
+++ b/app/views/v1/start.html
@@ -17,23 +17,27 @@
     {% endif %}
   </h1>
 
-  <p>You can use this service to register with a GP in England.</p>
+  <p>Use this service to apply to register with {{ practiceName }}.</p>
 
-  <!--
-  <p>You will need:</p>
+  <p>Something about what you might need...</p>
 
-  <ul>
-    <li></li>
-  </ul>
-  -->
-  <!--
-  <div>
-    Your rights?
-  </div>
-  <div>
-    GP rights?
-  </div>
-  -->
+  <details>
+    <summary>How can I find my NHS number?</summary>
+    <div class="signage">
+      <div class="info">
+        <p>
+          An NHS number is a 10 digit number, for example: <b>943 476 5919</b>
+        </p>
+        <p>You can find your NHS number:</p>
+        <ul>
+          <li><a href="javascript:return false;">Online using the Find My NHS Number servce</a></li>
+          <li>on your NHS medical card if you have one</li>
+          <li>on a letter from your GP or a hospital</li>
+          <li>on a printed prescription</li>
+        </ul>
+      </div>
+    </div>
+  </details>
 
   <div class="cta">
     <a href="name" class="button">Start</a>
