--- a/app/views/v1/home-address-postcode.html
+++ b/app/views/v1/home-address-postcode.html
@@ -28,7 +28,7 @@
         <div>
           <label for="building">Enter your building or flat number (optional)</label>
           <input type="text" id="building" name="building" value="{{ building }}" class="-small">
-          <span class="form-hint">For example “122” or “Flat 11”</span>
+          <span class="form-hint">For example ‘122’ or ‘Flat 11’</span>
         </div>
       </div>
 
