--- a/app/views/v1/nhs-number.html
+++ b/app/views/v1/nhs-number.html
@@ -16,10 +16,10 @@
   <form method="post">
     <fieldset>
 
-      {% if error %}
+      {% if errors.known %}
         <div class="error-summary">
           <div>
-            <p>{{ error }}</p>
+            <p>{{ errors.known }}</p>
           </div>
         </div>
       {% endif %}
@@ -30,6 +30,16 @@
           <input type="radio" id="nhs-number-yes" name="nhs-number-known" value="yes" {% if nhsnumber.known == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
+
+      <fieldset id="nhs-number-entry">
+        <div class="form-group">
+          <label for="nhs-number">What is your NHS number?</label>
+          <input type="text" id="nhs-number" name="nhs-number" value="{{ nhsnumber.number }}" class="-small">
+        </div>
+        <p class="form-hint">
+          For example: 943 476 5919
+        </p>
+      </fieldset>
 
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="nhs-number-no" class="block-label">
@@ -69,4 +79,22 @@
   </form>
 {% endblock %}
 
-{% block footer %}{% endblock %}
+{% block body_after %}
+  <script>
+    $(function() {
+      var $group = $('#nhs-number-entry');
+      var $els = $('[name="nhs-number-known"]');
+      var $selectedEl = $('[name="nhs-number-known"]:checked');
+      if ($selectedEl.val() !== "yes") {
+        $group.hide();
+      }
+      $els.on('change', function(e) {
+        if (this.value === "yes") {
+          $group.show();
+        } else {
+          $group.hide();
+        }
+      });
+    });
+  </script>
+{% endblock %}
