--- a/app/views/v1/home-address-result.html
+++ b/app/views/v1/home-address-result.html
@@ -31,10 +31,10 @@
         </tr>
       </table>
 
-      {% if error %}
-        <div class="error-summary">
-          <div>
-            <p>{{ error }}</p>
+      {% if message %}
+        <div class="signage measure">
+          <div class="message">
+            <p>{{ message }}</p>
           </div>
         </div>
       {% endif %}
