--- a/app/views/v1/home-address-postcode.html
+++ b/app/views/v1/home-address-postcode.html
@@ -26,9 +26,11 @@
 
       <div class="form-group">
         <div>
-          <label for="building">Enter your building or flat number (optional)</label>
+          <label for="building">
+            Enter your building or flat number (optional)
+            <span class="form-hint">For example ‘122’ or ‘Flat 11’</span>
+          </label>
           <input type="text" id="building" name="building" value="{{ building }}" class="-small">
-          <span class="form-hint">For example ‘122’ or ‘Flat 11’</span>
         </div>
       </div>
 
