--- a/app/views/v1/confirm-details.html
+++ b/app/views/v1/confirm-details.html
@@ -87,6 +87,27 @@
         <a href="nhs-number" class="button -secondary">Change</a>
       </td>
     </tr>
+
+    <tr>
+      <th scope="row">Your current GP</th>
+      <td>
+        {% if session.currentgp.registered == 'yes' %}
+          {% if session.currentgp.name != '' %}
+            {{ session.currentgp.name }}<br>
+          {% endif %}
+          {% if session.currentgp.address != '' %}
+            <pre class="user-input">{{ session.currentgp.address }}</pre>
+          {% endif %}
+        {% endif %}
+
+        {% if session.currentgp.registered == 'no' %}
+          I’m not registered with a GP
+        {% endif %}
+      </td>
+      <td class="control">
+        <a href="current-gp" class="button -secondary">Change</a>
+      </td>
+    </tr>
   </table>
 
   <div class="shunt-2">
@@ -94,5 +115,3 @@
   </div>
 
 {% endblock %}
-
-{% block footer %}{% endblock %}
