--- a/app/views/v1/current-gp.html
+++ b/app/views/v1/current-gp.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your NHS number :
+  Your current GP :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
