--- a/app/views/v1/confirm-details.html
+++ b/app/views/v1/confirm-details.html
@@ -1,6 +1,13 @@
 {% extends '_layouts/layout.html' %}
 
-{% block page_title %}Index : {{serviceName}}{% endblock %}
+{% block page_title %}
+  Check your answers : 
+  {% if practiceName %}
+    Register with {{ practiceName }}
+  {% else %}
+    {{serviceName}}
+  {% endif %}
+{% endblock %}
 
 {% block content %}
   <h1 class="primary">Check your answers</h1>
